tests/baselines/reference/newNamesInGlobalAugmentations1(strict=true).errors.txt
f1.d.ts(10,16): error TS7008: Member 'x' implicitly has an 'any' type.
f1.d.ts(12,5): error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.


==== f1.d.ts (2 errors) ====
    export {};
    
    declare module M.M1 {
        export let x: number;
    }
    declare global {
        interface SymbolConstructor {
            observable: symbol;
        }
        class Cls {x}
                   ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
        let [a, b]: number[];
        export import X = M.M1.x;
        ~~~~~~
!!! error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.
    }
    
==== main.ts (0 errors) ====
    Symbol.observable;
    new Cls().x
    let c = a + b + X;